--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/yanivam/CreateLatestImage#readme",
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.38.0",
+    "get-stream": "^6.0.1",
     "http": "^0.0.1-security"
   }
 }
